---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021-01-15
  Changes:
    - Updated Belt Prototype to allow smart belt placement
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-01-03
  Changes:
    - Added Energy Required to all Teirs of Machines & Items
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2020-12-19
  Changes:
    - Fixed some wording issues in the Locale
    - Added new experimental setting to relocate items into their normal vanilla locations
    - Updated all items in Logistics to respect the new setting above
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2020-12-17
  Changes:
    - Added offshore pumps
    - Adjusted Robots and Roboports
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020-11-24
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-11-09
  Changes:
    - Fixed up Beltbox and Loader Recipes
    - Fixed up Local for above items
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-10-19
  Changes:
    - Fixed issue with upgrade planner not upgrading modded items
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-10-17
  Changes:
    - Made chests slightly cheaper
    - Adjusted Menu layout
    - Added Higher Level Offshore Pumps