@@ -1,2 +1,3 @@
 
 require("integrations.stacking_beltboxes")
+require("integrations.loaderRedux")
