@@ -7,7 +7,8 @@
     "homepage": "https://github.com/Zombieland4942/zombiesextended-logistics",
     "dependencies": [
         "base >= 1.1.0",
-        "zombiesextended-core >= 1.0.4"
+        "zombiesextended-core >= 1.0.4",
+        "?LoaderRedux"
     ],
     "description": "ZombiesExtended Logistics adds a number of higher tier logistic items. This mod is still being tuned, please check the changelog before upgrading the mod. Ps. No Zombies are added.",
     "factorio_version": "1.1"
