@@ -46,8 +46,8 @@ large-logistic-container-buffer=Large Buffer Chest
 large-logistic-container-requester=Large Requester Chest
 roboport-mk1=Roboport Mk1
 roboport-mk2=Roboport Mk2
-transport-belt-mk1-loader=MK1 Compact Loader
-transport-belt-mk2-loader=MK2 Compact Loader
+transport-belt-mk1-loader=MK1 Loader
+transport-belt-mk2-loader=MK2 Loader
 transport-belt-mk1-beltbox=MK1 Stacking Beltbox
 transport-belt-mk2-beltbox=MK2 Stacking Beltbox
 
