@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.9
-Date: ????
+Date: 2021-06-07
   Changes:
+    - Added support for LoaderRedux
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: 2021-01-15
